--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "main": "src/app.js",
   "scripts": {
     "start": "gulp serve",
-    "pretest": "eslint .",
-    "test": "istanbul cover _mocha",
+    "test": "mocha",
     "mocha": "_mocha",
     "postinstall": "gulp swagger"
   },
