--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "request": "2.72.0",
     "require-dir": "0.3.0",
     "swagger": "0.7.5",
-    "swagger-express-mw": "0.6.0"
+    "swagger-express-mw": "0.6.0",
+    "mongoose": "^4.4.15"
   },
   "devDependencies": {
     "co-mocha": "^1.1.3",
