--- a/src/api/points/points.yaml
+++ b/src/api/points/points.yaml
@@ -15,3 +15,16 @@ get:
     "200":
       description: Success
 
+get:
+  description:
+  operationId: checkPoints
+  parameters:
+    - name: userId
+      required: true
+      type: string
+      in: path
+  responses:
+    "200":
+      description: Success
+
+
