--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "main": "src/app.js",
   "scripts": {
-    "start": "gulp serve",
+    "start": "SET NODE_ENV=dev && gulp serve",
     "test": "mocha",
     "mocha": "_mocha",
     "postinstall": "gulp swagger"
@@ -22,13 +22,15 @@
     "express": "4.14.0",
     "gulp": "3.9.1",
     "gulp-swagger": "0.0.10",
+    "mongoose": "^4.4.15",
     "request": "2.72.0",
     "require-dir": "0.3.0",
     "swagger": "0.7.5",
-    "swagger-express-mw": "0.6.0",
-    "mongoose": "^4.4.15"
+    "swagger-express-mw": "0.6.0"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "co-mocha": "^1.1.3",
     "eslint": "^3.13.1",
     "eslint-config-airbnb": "^14.0.0",
